--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ button { padding: 10px 20px; font-size: 18px; margin: 5px; }
 <script>
 
 // === CONFIGURACIÓN SHEETY ===
-const BASE_URL = "https://api.sheety.co/TU_API/kioscoPdas";
+const BASE_URL = "https://api.sheety.co/9389b56cb6358dbc85be664d0e548b76/kioscoPdas";
 const USERS_URL = BASE_URL + "/usuarios";
 const DEVICE_URL = BASE_URL + "/dispositivos";
 const LOGIN_URL = BASE_URL + "/login";
