--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <script>
 // 1. CONFIGURACIÓN (ASEGÚRATE DE QUE ESTO COINCIDA CON SHEETY)
-const API_USER = "TU_ID_DE_SHEETY"; // El código largo de tu URL de Sheety
+const API_USER = "https://api.sheety.co/9389b56cb6358dbc85be664d0e548b76/kioscoPdas"; // El código largo de tu URL de Sheety
 const PROJECT_NAME = "kioscoPdas"; 
 const BASE_URL = `https://api.sheety.co/${API_USER}/${PROJECT_NAME}`;
 
