--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="menuDiv">
             <h3 id="userTag" style="color: var(--success);">Sesión Activa</h3>
             <button onclick="abrirApp('https://play.google.com/store/apps/details?id=com.whatsapp')">ABRIR CD MUELLES</button>
-            <button onclick="window.location.href='https://https://www.marca.com/'">ABRIR GALERIA</button>
+            <button onclick="abrirApp('com.whatsapp')">ABRIR GALERIA</button>
             <button onclick="abrirApp('com.tuempresa.sga')">ABRIR WHALES</button>
             <button onclick="abrirApp('com.tuempresa.sga')">ABRIR WHALES_RECEPCION</button>
             <button onclick="abrirApp('com.tuempresa.sga')">ABRIR CAMARA</button>
